[workspace]
members = ["clade"]

[workspace.dependencies]
arrow = "51.0.0"
arrow-buffer = "51.0.0"
arrow-csv = "51.0.0"
arrow-flight = "51.0.0"
# For the JSON format support
# https://github.com/apache/arrow-rs/pull/2868
# https://github.com/apache/arrow-rs/pull/2724
arrow-integration-test = "51.0.0"
arrow-schema = "51.0.0"
async-trait = "0.1.64"

datafusion = "37.1.0"
datafusion-common = "37.1.0"
datafusion-expr = "37.1.0"

itertools = ">=0.10.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "signal", "process"] }
tracing = { version = "0.1", features = ["log"] }

[package]
name = "seafowl"
build = "build.rs"
version = "0.5.6"
edition = "2021"

readme = "README.md"
description = "Seafowl is an analytical database designed for modern data-driven Web applications."
authors = ["Splitgraph, Inc. <support@splitgraph.com>"]
keywords = ["database", "http", "web"]
homepage = "https://seafowl.io"
license = "Apache-2.0"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "build.rs",
    "migrations",

]

[features]
catalog-postgres = ["sqlx/postgres"]
default = ["catalog-postgres", "frontend-arrow-flight", "frontend-postgres", "object-store-s3", "object-store-gcs", "remote-tables"]
frontend-arrow-flight = ["dep:tonic", "dep:arrow-flight", "arrow-flight/flight-sql-experimental"]
frontend-postgres = ["convergence", "convergence-arrow"]
object-store-gcs = ["object_store/gcp"]
object-store-s3 = ["object_store/aws"]
remote-tables = ["dep:datafusion-remote-tables"]

[patch.crates-io]
# Pick up backport of https://github.com/apache/arrow-datafusion/pull/10114
datafusion = { git = "https://github.com/splitgraph/arrow-datafusion", branch = "avg-acc-fix" }
datafusion-common = { git = "https://github.com/splitgraph/arrow-datafusion", branch = "avg-acc-fix" }
datafusion-execution = { git = "https://github.com/splitgraph/arrow-datafusion", branch = "avg-acc-fix" }
datafusion-expr = { git = "https://github.com/splitgraph/arrow-datafusion", branch = "avg-acc-fix" }
datafusion-optimizer = { git = "https://github.com/splitgraph/arrow-datafusion", branch = "avg-acc-fix" }
datafusion-physical-expr = { git = "https://github.com/splitgraph/arrow-datafusion", branch = "avg-acc-fix" }
datafusion-physical-plan = { git = "https://github.com/splitgraph/arrow-datafusion", branch = "avg-acc-fix" }
datafusion-proto = { git = "https://github.com/splitgraph/arrow-datafusion", branch = "avg-acc-fix" }
datafusion-sql = { git = "https://github.com/splitgraph/arrow-datafusion", branch = "avg-acc-fix" }

[dependencies]
arrow = { workspace = true }
arrow-buffer = { workspace = true }
arrow-csv = { workspace = true }
arrow-flight = { workspace = true, optional = true }
# For the JSON format support
# https://github.com/apache/arrow-rs/pull/2868
# https://github.com/apache/arrow-rs/pull/2724
arrow-integration-test = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
base64 = "0.21.0"

bytes = "1.4.0"
chrono = { version = "0.4", default-features = false }
clade = { path = "clade" }
clap = { version = "3.2.19", features = [ "derive" ] }
config = "0.13.3"

# PG wire protocol support
convergence = { git = "https://github.com/splitgraph/convergence", branch = "datafusion-37.1-upgrade", optional = true }
convergence-arrow = { git = "https://github.com/splitgraph/convergence", branch = "datafusion-37.1-upgrade", optional = true }

dashmap = "5.4.0"

datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }

datafusion-remote-tables = { path = "./datafusion_remote_tables", optional = true }

deltalake = { git = "https://github.com/splitgraph/delta-rs", branch = "convert-to-delta-stats", features = ["datafusion"] }

futures = "0.3"
hex = ">=0.4.0"
itertools = { workspace = true }
lazy_static = ">=1.4.0"
metrics = { version = "0.22.1" }
metrics-exporter-prometheus = { version = "0.13.1" }
moka = { version = "0.12.5", default-features = false, features = ["future", "atomic64", "quanta"] }
object_store = "0.9.1"
percent-encoding = "2.2.0"
prost = "0.12.1"

# Needs to be in non-dev because repository::testutils can't be
# imported by tests::end_to_end if it's cfg(test).
rand = "0.8"
regex = ">=1.6.0"
reqwest = { version = "0.11.14", features = [ "stream" ] }
rmp = "0.8.11"
rmp-serde = "1.1.1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
rustyline = "13.0"
serde = "1.0.156"
serde_json = "1.0.93"
sha2 = ">=0.10.1"
sqlparser = { version = "0.44", features = ["visitor"] }
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "sqlite", "any", "uuid" ] }
strum = ">=0.24"
strum_macros = ">=0.24"
tempfile = "3"
thiserror = "1"
tokio = { workspace = true }
tokio-graceful-shutdown = { version = "0.14" }
tonic = { version = "0.11.0", optional = true }
tower = "0.4"
tracing = { workspace = true }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
url = "2.5"
uuid = "1.2.1"
warp = "0.3.6"

# For WASM user-defined functions
wasi-common = "17.0.0"
wasmtime = "17.0.0"
wasmtime-wasi = "17.0.0"

[dev-dependencies]
assert_cmd = "2"
assert_unordered = "0.3"
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.1.5", features = ["hardcoded-credentials"] }
aws-sdk-sts = { version = "1.3.1", features = ["behavior-version-latest"] }
rstest = "*"
serial_test = "2"
tonic-reflection = "0.11"
wiremock = "0.5"

[build-dependencies]
anyhow = "1.0.63"  # for build.rs
vergen = "7"

[profile.release]
codegen-units = 1
lto = true
strip = true
