[package]
name = "datafusion-remote-tables"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "TableProvider implementation able to query various remote data sources"
authors = ["Splitgraph, Inc. <support@splitgraph.com>"]
keywords = ["datafusion", "remote", "tables"]
homepage = "https://github.com/splitgraph/seafowl"
repository = "https://github.com/splitgraph/seafowl"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "33.0.0"
arrow-buffer = "33.0.0"
arrow-schema = "33.0.0"
async-trait = "0.1.64"

# Remote query execution for a variety of DBs
connectorx = { git = "https://github.com/splitgraph/connector-x", branch = "datafusion-19-upgrade", features = [ "dst_arrow", "src_postgres", "src_mysql", "src_sqlite" ] }

datafusion = "19.0.0"
datafusion-expr = "22.0.0"
itertools = ">=0.10.0"
log = "0.4"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "signal", "process"] }

[dev-dependencies]
rstest = "*"
