[package]
name = "datafusion-remote-tables"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "TableProvider implementation able to query various remote data sources"
authors = ["Splitgraph, Inc. <support@splitgraph.com>"]
keywords = ["datafusion", "remote", "tables"]
homepage = "https://github.com/splitgraph/seafowl"
repository = "https://github.com/splitgraph/seafowl"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }

# Remote query execution for a variety of DBs
connectorx = { git = "https://github.com/splitgraph/connector-x", branch = "datafusion-40-upgrade", features = [ "dst_arrow", "src_postgres", "src_mysql", "src_sqlite" ] }

datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
itertools = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = "*"
