[package]
name = "object_store_factory"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = "0.8.19"
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
rstest = "*"
temp-env = { version = "0.3", features = ["async_closure"] }
tokio = { workspace = true }


